# qwen-asr-web

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
src/qwen_asr_web/: __init__.py  app.py  asr.py  cli.py  jobs.py  llm.py
src/qwen_asr_web/static/: app.js  index.html  styles.css
