[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-asr-local-web"
version = "0.1.0"
description = "A local Qwen3-ASR web app and CLI for long audio/video transcription."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Qwen3-ASR Local Web Contributors" }]
keywords = ["asr", "qwen", "speech-recognition", "transcription", "fastapi"]
dependencies = [
  "qwen-asr==0.0.6",
  "fastapi>=0.136",
  "uvicorn[standard]>=0.48",
  "python-multipart>=0.0.29",
  "modelscope>=1.37",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
]

[project.scripts]
qwen3-asr = "qwen_asr_web.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qwen_asr_web = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
